# UAT-IA

./: .env  .env.sample  .gitignore  Dockerfile  README.md  base_config.cfg  config.cfg  docker-compose.yaml  init.sql  pyproject.toml  requirements.txt
data/: move_files.py  remove_files_with_no_keywords.py
src/: AbstractInputCreator.py  Constants.py  Database.py  DatabaseModels.py  FileInputData.py  Model.py  NormalInputCreator.py  Prediction.py  Predictor.py  SummarizeInputCreator.py  TFIDFInputCreator.py  Term.py  TermFileMapper.py  TermFiles.py  TermPrediction.py  TermTrainer.py  Thesaurus.py  TrainedModels.py  Trainer.py  TrainingFiles.py  UATMapper.py  file_terms_path_finder.py  main-old.py  main.py  main3.py  term_path_finder.py  test.py  train_term.py
src/Database/: Database.py  DatabaseModels.py  File.py  Keyword.py
src/InputCreators/: AbstractInputCreator.py  NormalInputCreator.py  SummarizeInputCreator.py  TFIDFInputCreator.py
src/data/: UAT.json  file_1.json  file_12.json  file_13.json  file_14.json  file_15.json  file_16.json  file_17.json  file_18.json  file_19.json  file_2.json  file_20.json  file_21.json  file_22.json  file_23.json  file_24.json  file_25.json  file_26.json  file_27.json  file_29.json  file_3.json  file_30.json  file_31.json  file_32.json  file_33.json  file_34.json  file_35.json  file_36.json  file_37.json  file_38.json  file_39.json  file_4.json  file_42.json  file_43.json  file_44.json  file_45.json  file_46.json  file_47.json  file_48.json  file_49.json  (+26 more)
src/models/: 1441.keras  953.keras  958.keras  959.keras  972.keras  (+3 more)
(+5 files in other folders)
