[project]
name = "uat_ia"
version = "0.0.1"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "keras",
    "keras-tuner",
    "tensorflow==2.10.0",
    "python-dotenv",
    "PyMuPDF",
    "tensorflow",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "memory_profiler",
    "numpy==1.23.5"
]

[project.urls]
repository = "https://github.com/TPP-UAT/UAT-IA"

